// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Result1486 /> should render 1`] = `
.c0 {
  margin-bottom: 1rem;
  padding: 0.625rem 1.25rem;
  border: 1px solid transparent;
  border-radius: 0.25rem;
  color: #434956;
  background: #ebeff3;
  border-color: #cbd6e0;
}

.c0 > *:first-child {
  margin-top: 0;
}

.c0 > *:last-child {
  margin-bottom: 0;
}

<div>
  <p>
    En cas de démission, la 
    <em>
      Convention collective nationale des bureaux d'études techniques, des cabinets d'ingénieurs-conseils et des sociétés de conseils du 15 décembre 1987
    </em>
     prévoit le respect d’un préavis d’une durée de 
    <strong>
      3 mois
    </strong>
     pour un
     
    cadres
  </p>
  <div
    class="c0"
  >
    Le contrat de travail, un accord collectif d’entreprise ou un usage peuvent prévoir une durée de préavis plus courte. Vous pouvez également convenir d’une dispense par accord avec l’employeur.
  </div>
</div>
`;

exports[`<Step1486 /> should render 1`] = `
.c2 {
  padding: 0;
  font-size: 1.15rem;
  margin-right: 2em;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c0 {
  font-size: 1.625rem;
  margin-top: 2rem;
  margin-bottom: 1.25rem;
}

.c3 {
  margin-top: 0.625rem;
  margin-right: 1.25rem;
  -webkit-flex: 1 1 70%;
  -ms-flex: 1 1 70%;
  flex: 1 1 70%;
  min-width: 400px;
}

.c1 {
  margin: 1.25rem 0;
}

<div>
  <h2
    class="c0"
  >
    Informations spécifiques
  </h2>
  <div
    class="c1"
  >
    <label
      class="c2"
      for="input-category"
    >
      Préciser votre catégorie professionnelle.
    </label>
    <select
      class="c3"
      id="input-category"
      name="category"
    >
      <option
        disabled=""
        value=""
      >
        ...
      </option>
      <option
        value="etam"
      >
        etam
      </option>
      <option
        value="manager"
      >
        cadres
      </option>
      <option
        value="investigator"
      >
        chargés d’enquête intermittent
      </option>
    </select>
  </div>
</div>
`;

exports[`<Step1486 /> should render coefficient 1`] = `
.c4 {
  margin-bottom: 1rem;
  padding: 0.625rem 1.25rem;
  border: 1px solid transparent;
  border-radius: 0.25rem;
  color: #434956;
  background: #ebeff3;
  border-color: #cbd6e0;
}

.c4 > *:first-child {
  margin-top: 0;
}

.c4 > *:last-child {
  margin-bottom: 0;
}

.c2 {
  padding: 0;
  font-size: 1.15rem;
  margin-right: 2em;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c0 {
  font-size: 1.625rem;
  margin-top: 2rem;
  margin-bottom: 1.25rem;
}

.c3 {
  margin-top: 0.625rem;
  margin-right: 1.25rem;
  -webkit-flex: 1 1 70%;
  -ms-flex: 1 1 70%;
  flex: 1 1 70%;
  min-width: 400px;
}

.c1 {
  margin: 1.25rem 0;
}

<div>
  <h2
    class="c0"
  >
    Informations spécifiques
  </h2>
  <div
    class="c1"
  >
    <label
      class="c2"
      for="input-category"
    >
      Préciser votre catégorie professionnelle.
    </label>
    <select
      class="c3"
      id="input-category"
      name="category"
    >
      <option
        disabled=""
        value=""
      >
        ...
      </option>
      <option
        value="etam"
      >
        etam
      </option>
      <option
        value="manager"
      >
        cadres
      </option>
      <option
        value="investigator"
      >
        chargés d’enquête intermittent
      </option>
    </select>
  </div>
  <div
    class="c1"
  >
    <label
      class="c2"
      for="input-coefficient"
    >
      Préciser votre coefficient hiérarchique.
    </label>
    <select
      class="c3"
      id="input-coefficient"
      name="coefficient"
    >
      <option
        disabled=""
        value=""
      >
        ...
      </option>
      <option
        value="200_355"
      >
        entre 200 et 355
      </option>
      <option
        value="400-500"
      >
        entre 400 et 500
      </option>
    </select>
  </div>
  <div
    class="c4"
  >
    si vous ne connaissez pas votre coefficient hiérarchique, munissez-vous de votre dernier bulletin de salaire, où ce dernier doit obligatoirement figurer. Cette information se trouve souvent dans l’en-tête.
  </div>
</div>
`;

exports[`<Step1486 /> should render coefficient and seniority 1`] = `
.c4 {
  margin-bottom: 1rem;
  padding: 0.625rem 1.25rem;
  border: 1px solid transparent;
  border-radius: 0.25rem;
  color: #434956;
  background: #ebeff3;
  border-color: #cbd6e0;
}

.c4 > *:first-child {
  margin-top: 0;
}

.c4 > *:last-child {
  margin-bottom: 0;
}

.c2 {
  padding: 0;
  font-size: 1.15rem;
  margin-right: 2em;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c0 {
  font-size: 1.625rem;
  margin-top: 2rem;
  margin-bottom: 1.25rem;
}

.c3 {
  margin-top: 0.625rem;
  margin-right: 1.25rem;
  -webkit-flex: 1 1 70%;
  -ms-flex: 1 1 70%;
  flex: 1 1 70%;
  min-width: 400px;
}

.c1 {
  margin: 1.25rem 0;
}

.c5 {
  font-style: italic;
}

<div>
  <h2
    class="c0"
  >
    Informations spécifiques
  </h2>
  <div
    class="c1"
  >
    <label
      class="c2"
      for="input-category"
    >
      Préciser votre catégorie professionnelle.
    </label>
    <select
      class="c3"
      id="input-category"
      name="category"
    >
      <option
        disabled=""
        value=""
      >
        ...
      </option>
      <option
        value="etam"
      >
        etam
      </option>
      <option
        value="manager"
      >
        cadres
      </option>
      <option
        value="investigator"
      >
        chargés d’enquête intermittent
      </option>
    </select>
  </div>
  <div
    class="c1"
  >
    <label
      class="c2"
      for="input-coefficient"
    >
      Préciser votre coefficient hiérarchique.
    </label>
    <select
      class="c3"
      id="input-coefficient"
      name="coefficient"
    >
      <option
        disabled=""
        value=""
      >
        ...
      </option>
      <option
        value="200_355"
      >
        entre 200 et 355
      </option>
      <option
        value="400-500"
      >
        entre 400 et 500
      </option>
    </select>
  </div>
  <div
    class="c4"
  >
    si vous ne connaissez pas votre coefficient hiérarchique, munissez-vous de votre dernier bulletin de salaire, où ce dernier doit obligatoirement figurer. Cette information se trouve souvent dans l’en-tête.
  </div>
  <div
    class="c1"
  >
    <label
      class="c2"
      for="input-seniority"
    >
      Préciser votre ancienneté.
    </label>
    <select
      class="c3"
      id="input-seniority"
      name="seniority"
    >
      <option
        disabled=""
        value=""
      >
        ...
      </option>
      <option
        value="<24"
      >
        moins de 24 mois
      </option>
      <option
        value=">24"
      >
        supérieure à 24 mois
      </option>
    </select>
  </div>
  <p
    class="c5"
  >
    L’ancienneté comprend la durée totale de présence en entreprise, contrats de travail successifs compris. Les contrats successifs rompus par une démission ou en cas de faute grave ou lourde ne sont pas comptabilisés
  </p>
</div>
`;
